 * Enh #3808: Ability to sponsor (fund) a bug or feature request.
 * Enh #3811: Allow private flag to be unset on resolved bugs.
 * Enh #3841: Add real name ability to mantis.
 * Enh #3867: Give the user control whether to open hyperlink in new or current window.
 * Enh #3870: Support for custom functions which provides hooks for customizing behaviour.
 * Fix #3094: Switching projects clears filter values.
 * Fix #3159: Allow case of user name to be changed. Also fixed bug where database error was displayed when trying to create user "TeSt" when user "Test" already exists.
 * Fix #3397: Delete notification should be off when deleting a project.
 * Fix #3473: g_bug_resolved_status_threshold variable ignored.
 * Fix #3504: project cookie not cleared at logout
 * Fix #3567: Reminders can be added for a readonly bug.
 * Fix #3622: Tweak attachment SQL in print bug pages.
 * Fix #3629: Duplicate Error ID.
 * Fix #3641: 'Date submited' in reports is always '12-31-69'.
 * Fix #3723: No ability to edit or even delete news is associated project was deleted.
 * Fix #3781: Fixed external URL in admin/check.php
 * Fix #3806: Timestamp in project management page (Version management section) isn't shown as configured
 * Fix #3824: Private bug reports and bugnotes are sent out as notifications to everyone.
 * Fix #3826: Allow case of project name to be changed.
 * Fix #3837: Bugs can be edited after being closed.
 * Fix #3840: Why strip the leading spaces from Description? (applied to all multi-line fields in issue + issue notes).
 * Fix #3851: Ability to change the view status for a group of bugs
 * Fix #3852: OK button in View Issues page is not localised
 * Fix #3853: Filters sometime generate an invalid query (partial fix).
 * Fix #3866: URLs that include bookmark are not hyperlinked correctly.
 * Fix #3873: Invalid queries being generated from old filters.
 * Fix #3879: Empty entry in project select field can cause bugs to be moved to non-existing project.